--- a/eAppointmentClient/package.json
+++ b/eAppointmentClient/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@sweetalert2/ngx-sweetalert2": "^13.0.0",
+    "devextreme": "24.2.5",
+    "devextreme-angular": "24.2.5",
+    "devextreme-schematics": "^1.9.0",
     "form-validate-angular": "^19.0.1",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
@@ -29,6 +32,8 @@
     "@angular/cli": "^19.2.1",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
+    "devextreme-cli": "latest",
+    "devextreme-themebuilder": "24.2.5",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
