--- a/eAppointmentServer/eAppointmentServer.WebAPI/appsettings.json
+++ b/eAppointmentServer/eAppointmentServer.WebAPI/appsettings.json
@@ -8,5 +8,10 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "SqlServer": "Data Source=AKAYA;Initial Catalog=eAppointmentDb;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    },
+    "Jwt": {
+        "Issuer": "Ataberk Kaya",
+        "Audience": "www.eappointment.taberkkaya.com",
+        "SecretKey": "www.eappointment.taberkkaya.com www.eappointment.taberkkaya.com www.eappointment.taberkkaya.com www.eappointment.taberkkaya.com Ataberk Kaya"
     }
 }
